Realign code and coding descriptions to match with backing schema
Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/docs/spec/element/data/code.mdx
+++ b/docs/spec/element/data/code.mdx
@@ -1,7 +1,7 @@
 ---
 id: code
 title: Code 🔬
-description: A code symbol element.
+description: A code symbol representing the primary code value.
 tags:
   - developer
 ---
