--- a/docs/spec/element/data/process.mdx
+++ b/docs/spec/element/data/process.mdx
@@ -31,26 +31,29 @@ Loosely taking inspiration from [HL7 Timing](https://www.hl7.org/fhir/datatypes.
 
 ## Structure
 
-- A Process shall always contain a `class` and `concept` attribute.
-  - The `class` ordered set shall have at least one concept, and no more than four concepts defined. Classes do not
-    require the full path hierarchy defined depending on what the intention of the concept being shared.
+Fundamentally, a Process is a representation of a defined process tracking concept. It is, at minimum, an in-line composition of
+a [Coding](/docs/spec/element/data/coding) element and an optional set of status related attributes.
+
+- A Process element leverages the [Coding](/docs/spec/element/data/coding#structure) element structure.
 - A Process may contain a `status` attribute.
   - The `status` attribute acts as a free text field which represents the specific status value that may be stored or
     encoded in the transmitting system.
-  - If `status` is defined, the `description` and `status_code` attributes may optionally be defined as well.
-- The recipient system shall primarily rely on the `class` and `concept` attributes.
-  - Recipient systems may choose to parse the `status`, `description` and `status_code` attributes as auxiliary or
-    supplementary data.
+  - If `status` is defined, the `status_code` and `status_description` attributes may optionally be defined as well.
+  - Both `status_code` and `status_description` attributes shall not be defined if the `status` attribute is not present.
+
+There are certain nuances for recipient systems to be aware of when processing the process element.
+
+- Recipient systems shall primarily rely on the [Coding](/docs/spec/element/data/coding) elements in this Process element (i.e. the `code`, `code_set` and `code_system` attributes).
+  - Recipient systems may elect to parse the `status`, `status_code` and `status_description` attributes as auxiliary or supplementary data.
   - Recipient systems shall not depend on these attributes as they are not guaranteed to exist, nor do they convey the
     standard concept hierarchy as defined by this specification.
 
-| Name        | Cardinality | Type           | Description & Constraints                                                                                                                                                                                                                                        |
-| ----------- | ----------- | -------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| class       | 1..\*       | `string[]`     | An ordered set of process tracking terms.                                                                                                                                                                                                                        |
-| concept     | 1..1        | `string`       | A URI reference to the concept map encodings used.                                                                                                                                                                                                               |
-| description | 0..1        | `string`       | An optional description of the status if present.                                                                                                                                                                                                                |
-| status      | 0..1        | `string`       | An optional description of the current condition or update of an application or authorization. Additional details about the current state are frequently conveyed (e.g., 'Pending Review', 'Under Inspection'). Statuses may be defined by the line of business. |
-| status_code | 0..1        | [Code](./code) | An optional codified representation of the status attribute. Status codes may be defined by the line of business.                                                                                                                                                |
+| Name               | Cardinality | Type                                     | Description & Constraints                                                                                                                                                                                                                                        |
+| ------------------ | ----------- | ---------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| _Coding_           | 1..1        | [Coding](/docs/spec/element/data/coding) | A Coding is a representation of a defined concept using a symbol from a defined [Code System](/docs/category/code-system).                                                                                                                                       |
+| status             | 0..1        | `string`                                 | An optional description of the current condition or update of an application or authorization. Additional details about the current state are frequently conveyed (e.g., 'Pending Review', 'Under Inspection'). Statuses may be defined by the line of business. |
+| status_code        | 0..1        | `string`                                 | An optional codified representation of the status attribute. Status codes may be defined by the line of business.                                                                                                                                                |
+| status_description | 0..1        | `string`                                 | An optional description of the status if present.                                                                                                                                                                                                                |
 
 ## Specification
 
@@ -92,33 +95,49 @@ Loosely taking inspiration from [HL7 Timing](https://www.hl7.org/fhir/datatypes.
 
 ## Implementation Notes
 
-The core of the process type is the representation of one of the paths in the
-[Process Tracking Concept Map](/docs/spec/code_system/process_tracking). This is represented in the `class` attribute as an ordered
-tuple. Each entry in the ordered set represents a specific detail level in the hierarchy. For example, the array value
-of `["Application", "Review", "Assessment"]` would indicate that the process concept being conveyed is representing the
-`Assessment` Stage within the `Review` Phase of an `Application` Lifecycle.
+The core of the process type is the structural representation of some form of a process tracking concept. The process
+type is conceptually aligned with the [Process Tracking Code System](/docs/spec/code_system/process_tracking) to
+represent the various levels of abstractions that are possible. The hierarchical nature of these abstractions are mapped
+via the [Application Process Concept Map](/docs/spec/concept_map/application_process) to represent the various levels of
+abstraction that are possible.
 
-The class array may be populated with fewer elements in situations where the concept being mapped represents a higher
-level concept. For example, if the `class` attribute only contains the array value of `["Application", "Review"]`, that
-means that only the `Review` Phase of an `Application` Lifecycle is represented; the more detailed Stage concept is not
-encoded. Systems reading the `class` attribute may extract a subset of the transmitted ordered array for processing
-since the lower level concepts map to higher level concepts in the concept map.
+Process tracking itself is a complex domain as it involves many different contexts and levels of abstraction. One of
+the Code Systems that leverage this data element is the
+[Application Process Code System](/docs/spec/code_system/application_process). This is represented through a standard
+[Coding](/docs/spec/element/data/coding) element structure. In the Coding element, there is a `code`, a `code_set` and a
+`code_system` attribute.
 
-The `concept` attribute is a static URI reference to the documentation for the current concept map being used. This URI
-is not intended to be machine readable as it is designed to act as a signal for human readers to see and understand the
-context of which terminologies and concepts are being conveyed.
+The `code` attribute is the primary code value, while the `code_set` attribute is an ordered
+set of code symbols. The `code_set` attribute is an ordered set of code symbols, where the last element must match the
+`code`. For example, the `code_set` value of `["APPLICATION", "TECH_REVIEW_COMMENT", "REFERRAL"]` would indicate that
+the application process concept being conveyed is representing the `REFERRAL` State within the
+`Technical Review and Comment` Stage of an `Application` Phase. This coding element would have a `code` of `REFERRAL` as
+it is the most specific and primary concept being conveyed.
+
+The `code_set` attribute may be populated with fewer elements in situations where the concept being mapped represents a
+higher level conceptual abstraction. For example, if the `code` attribute is "TECH_REVIEW_COMMENT", the `code_set`
+would have a value of `["APPLICATION", "TECH_REVIEW_COMMENT"]`. In this case, this means that the conceptual idea being
+conveyed is the `Technical Review and Comment` Stage of an `Application` Phase. Systems reading the `code_set` attribute
+may extract a subset of the transmitted ordered array for processing since the lower level codes map to higher level
+hierarchical code concepts within the [Application Process Code System](/docs/spec/code_system/application_process).
+
+The `code_system` attribute is a static URI reference to the documentation for the current code system being used. This
+URI is not intended to be machine readable as it is designed to act as a signal for human readers to see and understand
+the context of which terminologies and concepts are being conveyed.
 
 The `status` attribute is optional, but is designed to be an explicit "escape hatch" for specific lines of business to
 share their most detailed system concepts, should they choose to do so. Statuses declared here will be implicitly
-mapped under the declared `class` ordered tuple. If a `status` is defined, the `description` and `status_code`
-attributes may also be defined in order to assist with clarifying the status value.
+mapped under the `code` attribute. If a `status` is defined, the `status_code` and `status_description` attributes may
+also be defined in order to assist with clarifying the status value.
 
-Recipient systems may look at `status`, `status_code` and `description` as a reference point. However, the core intent
-of this data type is to ensure that the core `class` attribute to be the main source of truth when handling and
-interpreting the data for processing. Recipient systems SHOULD NOT depend on either `status`, `status_code` or
-`description` attributes when parsing and interpreting the process concept.
+Recipient systems may look at `status`, `status_code` and `status_description` as a reference point. However, the core
+intent of this data type is to ensure that the core `code` and `code_set` attributes are to be the main source of truth
+when handling and interpreting the data for processing. Recipient systems SHOULD NOT depend on either `status`,
+`status_code` or `status_description` attributes when parsing and interpreting the process concept.
 
 ## References
 
-- [Code](./code)
+- [Application Process Code System](/docs/spec/code_system/application_process)
+- [Application Process Concept Map](/docs/spec/concept_map/application_process)
 - [Process Tracking Concept Map](/docs/spec/code_system/process_tracking)
+- [Coding Element](/docs/spec/element/data/coding)
