--- a/docs/standard/element/process_tracking/state.mdx
+++ b/docs/standard/element/process_tracking/state.mdx
@@ -60,7 +60,7 @@ This list is to create a common terminology and definitions to the minimum commo
 | Submission review          | Submission review                     | The application is being evaluated by the relevant authority or team. This may involve assessment of documents and qualifications.                                                 |
 | Submitted                  | Submitted                             | The application has been submitted for review.                                                                                                                                     |
 | Technical review           | Technical review                      | The application is being reviewed by the deciding authority. This may occur at the same time as referrals or consultation.                                                         |
-| Review completed           | Review completion and recommendations | The application has been applicant.                                                                                                                                                |
+| Review completed           | Review completion and/or recommendations | The application has been reviewed/recommendation and comment prepared.                                                                                                         
 | Rejected                   | Rejected                              | The application has been rejected by deciding authority                                                                                                                            |
 | Withdrawn                  | Withdrawn                             | The application has been withdrawn by applicant. This may occur at any stage prior to a final decision or issuance.                                                                |
 | On hold                    | On hold '''with reason'''             | The application has been put on hold for a defined set of reasons. See On hold section                                                                                             |
