--- a/docs/standard/element/process_tracking/milestone.mdx
+++ b/docs/standard/element/process_tracking/milestone.mdx
@@ -53,9 +53,9 @@ All date and time data should be stored as **Coordinated Universal Time (UTC).**
 | First Nations Consultation end date   | The date and time when consultation with First Nations communities ends.                                                                                        |
 | Referral start date                   | The date and time when the submission is in referral with another entity has started.                                                                           |
 | Referral end date                     | The date and time when the submission is in referral with another entity has been completed.                                                                    |
-| Decision review start date            | The date and time when the reviews, referrals and consultation has been starts.                                                                                 |
+| Decision review start date            | The date and time when the reviews, referrals and consultation has started.                                                                                     |
 | Decision review end date              | The date and time when the reviews, referrals and consultation has been completed and the reviewing authority starts their final decision.                      |
-| Adjudication date                     | The date and time when the application is adjudicated, and a final decision is made. This date also be the same day it was issued.                              |
+| Adjudication date                     | The date and time when the application is adjudicated, and a final decision is made. This date may also be the same day it was issued.                          |
 | Issued date                           | The date and time when the permit is issued.                                                                                                                    |
 | On hold start date                    | The date and time that an application or authorization has been put on hold. See On hold section.                                                               |
 | On hold end date                      | The date and time that an application or authorization is no longer on hold. See On hold section.                                                               |
