Update intro page with a call to action for standards section
Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/docs/intro/index.mdx
+++ b/docs/intro/index.mdx
@@ -18,7 +18,8 @@ Hosting this specification in the open will encourage collaboration, adoption an
 
 These will be reviewed and updated with relevant partners, data custodians, stewards and sector permitting teams.
 
-You can dive into the specification [here](/docs/category/specification).
+- Visit the standards [here](/docs/category/standard).
+- Visit the specification [here](/docs/category/specification).
 
 ---
 
