refactor: re-key process_event to process_event_set

--- a/docs/spec/element/message/process_event_set.mdx
+++ b/docs/spec/element/message/process_event_set.mdx
@@ -38,9 +38,9 @@ possible for this message to only contain a subset of all known ProcessEvents.
 A Process Event Set shall contain every standard message [Header](/docs/spec/element/data/header#structure) property, in addition to
 the following properties:
 
-| Name          | Cardinality | Type                                                      | Description & Constraints                                                                 |
-| ------------- | ----------- | --------------------------------------------------------- | ----------------------------------------------------------------------------------------- |
-| process_event | 1..1        | [ProcessEvent](/docs/spec/element/resource/process_event) | A set of ProcessEvents. Represents a set of process concepts at a specific event in time. |
+| Name              | Cardinality | Type                                                      | Description & Constraints                                                                 |
+| ----------------- | ----------- | --------------------------------------------------------- | ----------------------------------------------------------------------------------------- |
+| process_event_set | 1..1        | [ProcessEvent](/docs/spec/element/resource/process_event) | A set of ProcessEvents. Represents a set of process concepts at a specific event in time. |
 
 ## Specification
 
