refactor: Add new Record schema
- Deprecate Process Event Set
- Standardize code system definitions

--- a/docs/spec/element/message/process_event_set.mdx
+++ b/docs/spec/element/message/process_event_set.mdx
@@ -1,6 +1,6 @@
 ---
 id: process_event_set
-title: Process Event Set 📝
+title: Process Event Set ⚠️
 description: Represents a set of process events associated to a specific record
 tags:
   - business
@@ -16,7 +16,7 @@ import { generateResolverOptions } from '@site/src/components/shared';
 import example from '@site/docs/spec/element/message/process_event_set.example.json';
 import schema from '@site/docs/spec/element/message/process_event_set.schema.json';
 
-[![Maturity:Draft](https://img.shields.io/badge/Maturity-Draft-yellow)](/docs/spec#maturity)
+[![Maturity:Deprecated](https://img.shields.io/badge/Maturity-Deprecated-lightgrey)](/docs/spec#maturity)
 
 Official URL: `https://bcgov.github.io/nr-pies/docs/spec/element/message/process_event_set`
 
